--- a/cocoaching-front/my-app/package.json
+++ b/cocoaching-front/my-app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.2.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-firebase": "^2.2.6",
     "react-scripts": "1.0.10"
   },
   "scripts": {
